--- a/SmartPRM-ClinicModule/public/index.html
+++ b/SmartPRM-ClinicModule/public/index.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>Xray - Responsive Bootstrap 4 Admin Dashboard Template</title>
+    <title>Smart PRM</title>
   </head>
   <body class="light">
     <noscript>
