--- a/SmartPRM-ClinicModule/public/index.html
+++ b/SmartPRM-ClinicModule/public/index.html
@@ -1,12 +1,12 @@
 ﻿<!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
+<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <link rel="icon" href="<%= BASE_URL %>SmartPRM.ico">
     <title>Smart PRM</title>
-  </head>
+</head>
   <body class="light">
     <noscript>
       <strong>We're sorry but vue-dashboard doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
